Play with multiple pages

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
-(executable
- (name counters)
- (libraries ocaml-vdom)
+(executables
+ (names counter hello)
+ (libraries ocaml-vdom routes)
  (modes js))
