Play with Cmd, kinda + change page from frag

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,6 @@
 (executables
  (names counter hello routing)
- (libraries ocaml-vdom routes)
+ (libraries ocaml-vdom js_of_ocaml routes)
+ (preprocess
+  (pps js_of_ocaml-ppx))
  (modes js))
